--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,11 @@ dependencies:
   - python=3.10
   - jupyterlab=3.5.2
   - ipywidgets=7.6.5
-  - numpy=1.21.5
-  - matplotlib=3.6.2
-  - scipy=1.7.3
   - ipympl=0.9.2
-  - seaborn=0.12.2
-  - nbgitpuller=1.1.1
-  - emcee==3.1.3
-  - ellc==1.8.5
+  - numpy
+  - matplotlib
+  - scipy
+  - seaborn
+  - nbgitpuller
+  - emcee
+  - ellc
