--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - jupyterlab=3.5.2
   - ipywidgets=7.6.5
   - ipympl=0.9.2
-  - viola=0.4.0
+  - voila=0.4.0
   - appmode=0.8.0
   - numpy
   - matplotlib
